results/SVCOMP/2-shot/log-assert3-2024_03_18_23_07_16.txt
class assert3 {

  //@ ensures (\exists int i; i >= 1000; i > 1000);
  public static void func() {
    int i = Verifier.nondetInt();

    if (i >= 1000)
      if (!(i > 1000))
        assert false;
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:5: error: cannot find symbol
    int i = Verifier.nondetInt();
            ^
  symbol:   variable Verifier
  location: class assert3
1 error

